k8s/backend-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: backend-deployment
  namespace: project3
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: chimuanyavic7/mern-backend:v1
          ports:
            - containerPort: 5050
