k8s/mongo-statefullset.yml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: mongo-statefulset
  namespace: project3
spec:
  serviceName: mongodb
  replicas: 2
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:latest
          ports:
            - containerPort: 27017
          command:
            - mongod
            - "--replSet"
            - rs0
            - "--bind_ip_all"
          volumeMounts:
              - name: mongo-data
                mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mongo-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: aws-ebs
        resources:
          requests:
            storage: 1Gi






      # volumes:
      #   - name: mongo-data
      #     persistentVolumeClaim:
      #       claimName: mongo-pvc



    # rs.initiate({ 
    #     _id: "rs0",
    #     members: [
    #     { _id: 0, host: "mongo-statefulset-0.mongo.project3.svc.cluster.local:27017" },
    #     { _id: 1, host: "mongo-statefulset-1.mongo.project3.svc.cluster.local:27017" }
    #     ]
    # })
