k8s/backend-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: backend-service
  namespace: project3
spec:
  selector:
    app: backend
  ports:
    - port: 5050
      targetPort: 5050
