k8s/headless-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: mongodb
  namespace: project3
spec:
  clusterIP: None
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
